feat: Implement basic UI for GroupEditActivity based on design images\n\n- Added rounded corner background to item layouts (item_group_member, item_group_ref, item_group_annotation, item_group_tag_assignment).\n- Added edit button to each item in GroupEditActivity's RecyclerViews.\n- Added "Add posts" and "Add refs" buttons to activity_group_edit.xml.\n- Implemented edit mode toggle functionality in GroupEditActivity via Toolbar menu.\n- Updated adapters (GroupMemberAdapter, GroupRefAdapter, GroupAnnotationAdapter, GroupTagAssignmentAdapter) to show/hide edit buttons based on edit mode.

--- a/app/src/main/res/layout/activity_group_edit.xml
+++ b/app/src/main/res/layout/activity_group_edit.xml
@@ -85,5 +85,29 @@
             android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+        <LinearLayout
+            android:id="@+id/edit_buttons_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            android:gravity="center_horizontal"
+            android:visibility="gone"> <!-- 初期状態では非表示 -->
+
+            <Button
+                android:id="@+id/add_posts_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add posts"
+                android:layout_marginEnd="8dp"/>
+
+            <Button
+                android:id="@+id/add_refs_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add refs"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
