--- a/app/src/main/res/layout/item_group_member.xml
+++ b/app/src/main/res/layout/item_group_member.xml
@@ -23,15 +23,17 @@
             android:textStyle="normal"
             android:text="Post Content" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/edit_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:src="@drawable/ic_edit"
             android:background="@drawable/rounded_purple_background"
-            android:padding="4dp"
+            android:padding="8dp"
             android:layout_marginStart="8dp"
-            android:visibility="gone" /> <!-- 初期状態では非表示 -->
+            android:visibility="gone"
+            android:tint="@android:color/white"
+            android:contentDescription="Edit Tags" /> <!-- 初期状態では非表示 -->
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
