--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/bluesky_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,7 +51,7 @@
         android:id="@+id/button_to_group"
         android:layout_width="182dp"
         android:layout_height="49dp"
-        android:background="@drawable/button_rectangular_background"
+        android:backgroundTint="@color/light_pink_white"
         android:text="グループ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -62,7 +62,7 @@
         android:id="@+id/button_to_post"
         android:layout_width="182dp"
         android:layout_height="49dp"
-        android:background="@drawable/button_rectangular_background"
+        android:backgroundTint="@color/light_pink_white"
         android:text="投稿一覧"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_to_group"
@@ -72,7 +72,7 @@
         android:id="@+id/button_to_tags"
         android:layout_width="182dp"
         android:layout_height="49dp"
-        android:background="@drawable/button_rectangular_background"
+        android:backgroundTint="@color/light_pink_white"
         android:text="タグ一覧"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_to_post"
